Import of KOKOGIKO/HTTP-MobileAgent-Plugin-Extension-0.13022 from CPAN.
gitpan-cpan-distribution: HTTP-MobileAgent-Plugin-Extension
gitpan-cpan-version:      0.13022
gitpan-cpan-path:         KOKOGIKO/HTTP-MobileAgent-Plugin-Extension-0.13022.tar.gz
gitpan-cpan-author:       KOKOGIKO
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -28,3 +28,7 @@ Revision history for Perl extension HTTP::MobileAgent::Plugin::Extension
     - Add New GW IP Adress of DDIPOCKET
     - Fixes bug of logic judging vodafone terminal supports 
       Station function or not
+
+0.13022
+    - Add New model of NTT DoCoMo
+    - Add New GW IP Adress of DDIPOCKET
